# Pillow

./: .appveyor.yml  .gitignore  CMakeLists.txt
.github/workflows/: macos-install.sh
.travis/: install.sh
src/: _imagingft.c  display.c  map.c
src/libImaging/: Dib.c
